styling finished for banners cocomplete with houses sigil loading

--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -1,1 +1,4 @@
-@import "components/battleTracker";
+@import "components/setup";
+@import "components/battleViewer";
+@import "components/housesBanner";
+@import "components/centralViewer";
