--- a/dev/styles/components/_centralViewer.scss
+++ b/dev/styles/components/_centralViewer.scss
@@ -10,7 +10,7 @@
 
 .centralViewerInfo {
   background-image: url('/images/ricepaper_v3.png');
-  height: 50vh;
+  min-height: 50vh;
   padding-top: 20px;
   padding-right: 20px;
   padding-left: 20px;
@@ -83,3 +83,10 @@
     background-size: contain;
 }
 
+/* Landscape phones and down */
+@media (max-width: 480px) {
+    .centralViewer {
+        width: 100%
+    } 
+
+}
