..// on images for git hosting

--- a/dev/styles/components/_housesBanner.scss
+++ b/dev/styles/components/_housesBanner.scss
@@ -16,47 +16,47 @@
 }
 
 .sigilArryn {
-    background-image: url('/images/arrynSigil.png');
+    background-image: url('../../images/arrynSigil.png');
 }
 
 .sigilBaratheon {
-    background-image: url('/images/baratheonSigil.png');
+    background-image: url('../../images/baratheonSigil.png');
 }
 
 .sigilBolton {
-    background-image: url('/images/boltonSigil.png')
+    background-image: url('../../images/boltonSigil.png')
 }
 
 .sigilCafferen {
-    background-image: url('/images/cafferenSigil.png');
+    background-image: url('../../images/cafferenSigil.png');
 }
 
 .sigilClegane {
-    background-image: url('/images/cleganeSigil.png')
+    background-image: url('../../images/cleganeSigil.png')
 }
 
 .sigilFell {
-    background-image: url('/images/fellSigil.png')
+    background-image: url('../../images/fellSigil.png')
 }
 
 .sigilAlchemist {
-    background-image: url('/images/fireSigil.png')
+    background-image: url('../../images/fireSigil.png')
 }
 
 .sigilForrester {
-    background-image: url('/images/forresterSigil.png')
+    background-image: url('../../images/forresterSigil.png')
 }
 
 .sigilFrey {
-    background-image: url('/images/freySigil.png')
+    background-image: url('../../images/freySigil.png')
 }
 
 .sigilGrandison {
-    background-image: url('/images/grandisonSigil.png')
+    background-image: url('../../images/grandisonSigil.png')
 }
 
 .sigilGreyjoy {
-    background-image: url('/images/greyjoySigil.png')
+    background-image: url('../../images/greyjoySigil.png')
 }
 
 .sigilKingsguard {
@@ -64,40 +64,40 @@
 }
 
 .sigilLannister {
-    background-image: url('/images/lannisterSigil.png')
+    background-image: url('../../images/lannisterSigil.png')
 }
 
 .sigilMartell {
-    background-image: url('/images/martellSigil.png')
+    background-image: url('../../images/martellSigil.png')
 }
 
 .sigilredwyne {
-    background-image: url('/images/redwyneSigil.png')
+    background-image: url('../../images/redwyneSigil.png')
 }
 
 .sigilReed {
-    background-image: url('/images/reedSigil.png')
+    background-image: url('../../images/reedSigil.png')
 }
 
 .sigilIron,
 .sigilTargaryen {
-    background-image: url('/images/targaryenSigil.png')
+    background-image: url('../../images/targaryenSigil.png')
 }
 
 .sigilStark {
-    background-image: url('/images/starkSigil.png');
+    background-image: url('../../images/starkSigil.png');
 }
 
 .sigilTarly {
-    background-image: url('/images/tarlySigil.png')
+    background-image: url('../../images/tarlySigil.png')
 }
 
 .sigilTully {
-    background-image: url('/images/tullySigil.png')
+    background-image: url('../../images/tullySigil.png')
 }
 
 .sigilTyrell {
-    background-image: url('/images/tyrellSigil.png')
+    background-image: url('../../images/tyrellSigil.png')
 }
 
 /* Landscape phones and down */
