--- a/dev/styles/components/_battleViewer.scss
+++ b/dev/styles/components/_battleViewer.scss
@@ -12,7 +12,7 @@
         order:-1;
     }
     .currentContainer {
-        background-image: url('/images/ricepaper_v3.png')
+        background-image: url('../../images/ricepaper_v3.png')
     }
 
 }
