--- a/dev/styles/components/_centralViewer.scss
+++ b/dev/styles/components/_centralViewer.scss
@@ -1,15 +1,15 @@
 .bannerSection {
-    background-image: url('/images/ricepaper_v3.png');
+    background-image: url('../../images/ricepaper_v3.png');
     height: 50vh;
 };
 
 .centralViewer {
     width: 80%;
-    background-image: url('/images/ricepaper_v3.png')
+    background-image: url('../../images/ricepaper_v3.png')
 }
 
 .centralViewerInfo {
-  background-image: url('/images/ricepaper_v3.png');
+  background-image: url('../../images/ricepaper_v3.png');
   min-height: 50vh;
   padding-top: 20px;
   padding-right: 20px;
@@ -36,50 +36,50 @@
 }
 
 .abductionoflyannastarkPic {
-    background-image: url('/images/rhaegarAbduction.jpg');
+    background-image: url('../../images/rhaegarAbduction.jpg');
 }
 
 .executionofrickardandbrandonstarkPic {
-    background-image: url('/images/execution.png');
+    background-image: url('../../images/execution.png');
 }
 
 .battleofsummerhallPic {
-    background-image: url('/images/summerHall.jpg');
+    background-image: url('../../images/summerHall.jpg');
 }
 
 .battleofashfordPic {
-    background-image: url('/images/ashford.jpg');
+    background-image: url('../../images/ashford.jpg');
 }
 
 .battleofthebellsPic {
-    background-image: url('/images/bells.jpg');
+    background-image: url('../../images/bells.jpg');
 }
 
 .battleofthetridentPic {
-    background-image: url('/images/trident.jpg');
+    background-image: url('../../images/trident.jpg');
     background-size: contain;
 }
 
 .wildfireplotPic {
-    background-image: url('/images/jamieKillsMadKing.jpg');
+    background-image: url('../../images/jamieKillsMadKing.jpg');
     background-size: contain;
 }
 
 .sackofkingslandingPic {
-    background-image: url('/images/sackOfKingsLanding.jpg');
+    background-image: url('../../images/sackOfKingsLanding.jpg');
 }
 
 .seigeofstormsendPic {
-    background-image: url('/images/siegeofStormsEnd.jpg');
+    background-image: url('../../images/siegeofStormsEnd.jpg');
 }
 
 .showdownatthetowerofjoyPic {
-    background-image: url('/images/arthur_dayne___sword_of_the_morning_by_awpgoblin389-da7kb6w.png');
+    background-image: url('../../images/arthur_dayne___sword_of_the_morning_by_awpgoblin389-da7kb6w.png');
     background-size: contain;
 }
 
 .assultondragonstonePic {
-    background-image: url('/images/FuryDragonstone.jpg');
+    background-image: url('../../images/FuryDragonstone.jpg');
     background-size: contain;
 }
 
