fixed banner image route

--- a/dev/styles/components/_housesBanner.scss
+++ b/dev/styles/components/_housesBanner.scss
@@ -1,5 +1,5 @@
 .housesBanner {
-    background-image: url('/images/grey_wash_wall.png');
+    background-image: url('../../images/grey_wash_wall.png');
     width: 10%;
     min-height: 100vh;
 }
